welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:13: error: not found: value color
    return col == color.green
                  ^